--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,7 @@
-RewriteRule ^$ src/index.html [L]
+RewriteEngine On # 
+Redirect root to views/index.html 
+RewriteRule ^$ views/index.html [L] # 
+Redirect other requests to the views folder 
+RewriteCond %{REQUEST_FILENAME} !-f 
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteRule ^(.*)$ views/$1 [L] 
